--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ header {
   align-items: center;
   padding: 0px 30px;
   box-sizing: border-box;
-  background-color: #eee;
+  /* background-color: #eee; */
 }
 
 header ul {
