--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,8 @@
 }
 
 /* --------PC-------- */
-@media (min-width: 1200px) {
+@media (min-width: 1000px) {
   /* 헤더  */
-
   header {
     width: 100%;
     display: flex;
@@ -23,7 +22,7 @@
     gap: 20px;
     align-items: center;
     font-size: 18px;
-    font-family: "Gabarito", sans-serif;
+    font-family: "Freesentation-9Black";
   }
   header h1 {
     width: 70px;
@@ -73,7 +72,7 @@
   /* con1 */
   .con1 {
     width: 100%;
-    padding: 0px 20px;
+    padding: 0px 30px;
     box-sizing: border-box;
     color: var(--color);
   }
@@ -85,14 +84,17 @@
   }
   .con1 ul {
     width: 100%;
+    height: 100%;
     display: flex;
-    gap: 10px;
+    gap: 20px;
   }
   .con1 ul li {
-    width: calc(100% / 3 - 10px);
+    width: calc(100% / 3 - 20px);
   }
   .con1 ul img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   .con1 ul p {
     font-family: "Freesentation-9Black";
@@ -101,7 +103,7 @@
   /* con2 */
   .con2 {
     width: 100%;
-    padding: 50px 0px;
+    padding: 100px 0px;
     color: var(--color);
   }
   .con2 h3 {
@@ -109,7 +111,7 @@
     font-size: 30px;
     font-family: "Abhaya Libre", serif;
     font-weight: 300;
-    margin: 0 auto;
+    margin: 0 auto 50px;
   }
   .con2 .bg_y {
     background-color: #fceea3;
@@ -125,6 +127,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
   }
 
   .con2 .c1 .txt {
@@ -172,7 +175,7 @@
 
   .con2 .c2 .txt {
     padding: 100px;
-    margin-right: 150px;
+    margin-right: 200px;
     box-sizing: border-box;
     font-family: "Freesentation-9Black";
   }
@@ -205,6 +208,7 @@
       transform: translateX(-100%);
     }
   }
+
   /* con3 */
   .con3 {
     width: 100%;
@@ -233,12 +237,12 @@
   }
 
   .texture li:nth-child(1) {
-    margin: 100px 0px 0px -120px;
+    margin: 120px 0px 0px -120px;
   }
 
   .texture img {
-    width: 350px;
-    height: 450px;
+    width: 400px;
+    height: 550px;
   }
   .texture p {
     font-size: 45px;
@@ -252,6 +256,7 @@
     font-size: 35px;
     font-family: "Abhaya Libre", serif;
   }
+
   .soap {
     font-family: "Freesentation-9Black";
   }
@@ -292,7 +297,8 @@
   /* con4 */
   .con4 {
     width: 100%;
-    padding: 100px 0px;
+    padding: 200px 100px;
+    box-sizing: border-box;
     color: var(--color);
   }
   .con4 h3 {
@@ -303,17 +309,21 @@
   }
 
   .con4 ul {
+    width: 100%;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
   }
-
+  .con4 ul li {
+    width: calc(100% / 5 - 30px);
+  }
   .con4 ul img {
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
   }
   .con4 ul p {
+    font-size: 18px;
     text-align: center;
     margin-top: 10px;
     font-family: "Freesentation-9Black";
@@ -331,16 +341,18 @@
   footer ul li {
     width: calc(100% / 2);
   }
-  footer ul li:nth-child(2) {
-    display: flex;
-    gap: 50px;
-    flex-wrap: wrap;
-  }
+
   footer ul li:nth-child(1) {
     font-size: 25px;
     font-family: "Abhaya Libre", serif;
     padding: 50px;
     box-sizing: border-box;
+  }
+  footer ul li:nth-child(2) {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    flex-wrap: wrap;
   }
   footer ul li:nth-child(2) div {
     width: 300px;
@@ -369,7 +381,7 @@
   }
 }
 /* --------태블릿-------- */
-@media (min-width: 480px) and (max-width: 1200px) {
+@media (min-width: 700px) and (max-width: 1000px) {
   /* 헤더  */
 
   header {
@@ -389,7 +401,7 @@
     gap: 20px;
     align-items: center;
     font-size: 18px;
-    font-family: "Gabarito", sans-serif;
+    font-family: "Freesentation-9Black";
   }
   header h1 {
     width: 70px;
@@ -538,7 +550,7 @@
 
   .con2 .c2 .txt {
     padding: 100px;
-    margin-right: 150px;
+    /* margin-right: 150px; */
     box-sizing: border-box;
     font-family: "Freesentation-9Black";
   }
@@ -584,12 +596,403 @@
   .con3 > ul > li {
     width: calc(100% / 2);
   }
+  .con3 > ul > li:nth-child(1) {
+    overflow: hidden;
+  }
 
   .texture {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    gap: 150px;
+    gap: 30px;
+  }
+
+  .texture li {
+    width: 200px;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  .texture li:nth-child(1) {
+    margin: 100px 0px 0px -100px;
+  }
+
+  .texture img {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+  .texture p {
+    font-size: 35px;
+    margin: 20px 0px 0px -50px;
+    font-family: "Abhaya Libre", serif;
+  }
+
+  .con3 ul li:nth-child(2) h3 {
+    text-align: center;
+    margin: 30px 0px 15px;
+    font-size: 30px;
+    font-family: "Abhaya Libre", serif;
+  }
+
+  .soap {
+    font-family: "Freesentation-9Black";
+  }
+  .soap > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .soap > ul > li {
+    margin-top: 20px;
+  }
+  .soap > ul > li:nth-child(1) {
+    width: 100px;
+  }
+  .soap > ul > li:nth-child(2) {
+    width: 70%;
+  }
+  .soap img {
+    width: 100%;
+  }
+  .soap h4 {
+    margin: 10px 0px;
+  }
+  .soap p {
+    font-size: 11px;
+  }
+
+  .soap_tag {
+    margin-top: 20px;
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    font-size: 13px;
+    flex-wrap: wrap;
+  }
+
+  .soap_tag li {
+    padding: 3px;
+    background-color: #eee;
+  }
+  /* con4 */
+
+  .con4 {
+    width: 100%;
+    padding: 200px 0px;
+    box-sizing: border-box;
+    color: var(--color);
+  }
+  .con4 h3 {
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 30px;
+    font-family: "Abhaya Libre", serif;
+  }
+
+  .con4 ul {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+  }
+  .con4 ul li {
+    width: calc(100% / 5 - 30px);
+  }
+  .con4 ul img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .con4 ul p {
+    font-size: 15px;
+    text-align: center;
+    margin-top: 10px;
+    font-family: "Freesentation-9Black";
+  }
+
+  /* footer */
+  footer {
+    width: 100%;
+    color: var(--color);
+  }
+  footer ul {
+    display: flex;
+  }
+
+  footer ul li {
+    width: calc(100% / 2);
+  }
+
+  footer ul li:nth-child(1) {
+    font-size: 25px;
+    font-family: "Abhaya Libre", serif;
+    padding: 50px;
+    box-sizing: border-box;
+  }
+  footer ul li:nth-child(2) {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  footer ul li:nth-child(2) div {
+    width: 30%;
+    text-align: center;
+    font-family: "Freesentation-9Black";
+  }
+  footer ul li:nth-child(2) div h3 {
+    font-size: 22px;
+    line-height: 50px;
+  }
+  footer ul li:nth-child(2) div h4 {
+    line-height: 30px;
+  }
+  footer .sns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    font-size: 35px;
+  }
+
+  footer > div {
+    font-size: 14px;
+    padding: 20px 50px;
+    box-sizing: border-box;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 699px) {
+  /* 헤더  */
+
+  header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 30px;
+    box-sizing: border-box;
+    color: var(--color);
+    position: fixed;
+    top: 0;
+  }
+  header h1 {
+    width: 70px;
+    height: 70px;
+  }
+  header h1 img {
+    width: 100%;
+    height: 100%;
+  }
+
+  header ul {
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+    gap: 20px;
+  }
+
+  header .pc {
+    display: none;
+  }
+
+  /* 비쥬얼 */
+  .visual {
+    width: 100%;
+    height: 100%;
+    padding: 80px 0px;
+  }
+  .visual .wrap {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+  }
+  .visual h2 {
+    font-size: 50px;
+    font-family: "Abhaya Libre", serif;
+    font-weight: 500;
+    text-align: center;
+    margin-top: 30px;
+    color: var(--color);
+  }
+  .visual a {
+    width: 85%;
+    height: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  .visual img {
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+  }
+  /* con1 */
+  .con1 {
+    width: 100%;
+    padding: 0px 20px;
+    box-sizing: border-box;
+    color: var(--color);
+  }
+  .con1 h3 {
+    font-size: 30px;
+    font-family: "Abhaya Libre", serif;
+    font-weight: 200;
+    margin-bottom: 10px;
+  }
+  .con1 ul {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+  }
+  .con1 ul li {
+    width: calc(100% / 3 - 10px);
+  }
+  .con1 ul img {
+    width: 100%;
+  }
+  .con1 ul p {
+    font-size: 8px;
+    font-family: "Freesentation-9Black";
+    /* transform: translate(10px, -30px); */
+    transform: translateY(-30px);
+    text-align: center;
+  }
+  /* con2 */
+  .con2 {
+    width: 100%;
+    padding: 50px 0px;
+    color: var(--color);
+  }
+  .con2 h3 {
+    width: 90%;
+    font-size: 20px;
+    font-family: "Abhaya Libre", serif;
+    font-weight: 300;
+    margin: 0 auto;
+  }
+  .con2 .bg_y {
+    background-color: #fceea3;
+  }
+  .con2 .bg_r {
+    color: #ff684f;
+  }
+  .con2 .tit_left {
+    display: block;
+    margin-left: 50px;
+  }
+  .con2 ul {
+    width: 100%;
+  }
+  .con2 .c1 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .con2 .c1 .txt {
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+    font-family: "Freesentation-9Black";
+    order: 2 !important;
+  }
+  .con2 .c1 .txt_image {
+    order: 1 !important;
+  }
+
+  .con2 .txt span {
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    display: block;
+  }
+
+  .con2 .txt h4 {
+    margin-bottom: 20px;
+  }
+
+  .con2 .txt p {
+    font-size: 15px;
+    line-height: 25px;
+    margin-bottom: 30px;
+  }
+
+  .con2 .txt_image {
+    width: 80%;
+    height: 250px;
+    margin: 0 auto 30px;
+  }
+
+  .con2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .con2 div {
+    width: 100px;
+    height: 25px;
+    line-height: 25px;
+    margin: 0 auto 50px;
+    text-align: center;
+    font-size: 14px;
+    display: block;
+    color: #fff;
+    background-color: #004236;
+  }
+
+  .con2 .c2 .txt {
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+    font-family: "Freesentation-9Black";
+  }
+
+  /* 흐르는 텍스트 */
+
+  .marquee-container {
+    width: 100%;
+    overflow: hidden;
+    color: var(--color);
+    font-size: 50px;
+    font-family: "Abhaya Libre", serif;
+  }
+
+  .marquee-text {
+    display: flex;
+    white-space: nowrap;
+    animation: marquee 10s linear infinite;
+  }
+
+  .repeat-text {
+    margin-left: 20px;
+  }
+
+  @keyframes marquee {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  /* con3 */
+  .con3 {
+    width: 100%;
+    padding: 100px 0px;
+    color: var(--color);
+
+    overflow: hidden;
+  }
+
+  .texture {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
   }
 
   .texture li {
@@ -599,15 +1002,15 @@
   }
 
   .texture li:nth-child(1) {
-    margin: 100px 0px 0px -120px;
+    margin: 100px 0px 0px -150px;
   }
 
   .texture img {
-    width: 350px;
-    height: 450px;
+    width: 300px;
+    height: 350px;
   }
   .texture p {
-    font-size: 45px;
+    font-size: 35px;
     margin: 20px 0px 0px -30px;
     font-family: "Abhaya Libre", serif;
   }
@@ -618,36 +1021,58 @@
     font-size: 35px;
     font-family: "Abhaya Libre", serif;
   }
+
+  .con3 > ul > li:nth-child(2) {
+    width: 90%;
+
+    margin: 0 auto;
+  }
   .soap {
+    width: 90%;
+    margin: 0px auto;
     font-family: "Freesentation-9Black";
   }
   .soap > ul {
+    width: 100%;
+
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 20px;
   }
 
   .soap > ul > li {
     margin-top: 20px;
   }
-
+  .soap > ul > li:nth-child(1) {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+  .soap > ul > li:nth-child(2) {
+    width: 70%;
+  }
   .soap img {
-    width: 150px;
+    width: 100%;
+    height: 100%;
+    display: block;
   }
   .soap h4 {
-    margin: 10px 0px;
+    font-size: 15px;
+    line-height: 30px;
   }
   .soap p {
-    font-size: 14px;
-    width: 300px;
+    font-size: 8px;
+    width: 100%;
   }
 
   .soap_tag {
-    margin-top: 30px;
+    margin-top: 10px;
     display: flex;
     gap: 10px;
-    width: 250px;
-    font-size: 13px;
+    width: 100%;
+
+    font-size: 10px;
     flex-wrap: wrap;
   }
 
@@ -660,9 +1085,10 @@
     width: 100%;
     padding: 100px 0px;
     color: var(--color);
+    overflow: hidden;
   }
   .con4 h3 {
-    font-size: 25px;
+    font-size: 18px;
     text-align: center;
     margin-bottom: 30px;
     font-family: "Abhaya Libre", serif;
@@ -690,51 +1116,47 @@
     width: 100%;
     color: var(--color);
   }
-  footer ul {
-    display: flex;
-  }
 
-  footer ul li {
-    width: calc(100% / 2);
+  footer ul li:nth-child(1) {
+    display: none;
   }
   footer ul li:nth-child(2) {
+    width: 100%;
     display: flex;
+    justify-content: center;
     gap: 50px;
     flex-wrap: wrap;
   }
-  footer ul li:nth-child(1) {
-    font-size: 25px;
-    font-family: "Abhaya Libre", serif;
-    padding: 50px;
-    box-sizing: border-box;
-  }
   footer ul li:nth-child(2) div {
-    width: 300px;
+    width: 30%;
     text-align: center;
     font-family: "Freesentation-9Black";
   }
   footer ul li:nth-child(2) div h3 {
-    font-size: 22px;
     line-height: 50px;
   }
   footer ul li:nth-child(2) div h4 {
+    font-size: 15px;
     line-height: 30px;
   }
   footer .sns {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    font-size: 35px;
+    gap: 10px;
+    font-size: 25px;
   }
 
   footer > div {
     font-size: 14px;
-    padding: 20px 50px;
-    box-sizing: border-box;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    margin-top: 20px;
   }
 }
 
+/* --------모바일-------- */
 @media (max-width: 480px) {
   /* 헤더  */
 
