--- a/css/brandStory.css
+++ b/css/brandStory.css
@@ -1,7 +1,7 @@
 :root {
   --color: #004236;
 }
-
+/* --------PC-------- */
 @media (min-width: 1000px) {
   /* 헤더  */
   header {
@@ -315,6 +315,7 @@
   }
 }
 
+/* --------태블릿-------- */
 @media (min-width: 700px) and (max-width: 1000px) {
   /* 헤더  */
   header {
@@ -932,6 +933,7 @@
   }
 }
 
+/* --------모바일-------- */
 @media (max-width: 480px) {
   /* 헤더  */
 
