--- a/css/index.css
+++ b/css/index.css
@@ -59,6 +59,7 @@
     margin-top: 30px;
     color: var(--color);
   }
+
   .visual a {
     width: 85%;
     height: 70%;
@@ -70,6 +71,7 @@
     height: 100%;
     object-fit: cover;
   }
+
   /* con1 */
   .con1 {
     width: 100%;
@@ -82,6 +84,14 @@
     font-family: "Abhaya Libre", serif;
     font-weight: 200;
     margin-bottom: 10px;
+    transition: 0.5s;
+    transform: translateY(50px);
+    opacity: 0;
+  }
+
+  .con1 h3.on {
+    transform: translateY(0px);
+    opacity: 1;
   }
   .con1 ul {
     width: 100%;
@@ -91,7 +101,26 @@
   }
   .con1 ul li {
     width: calc(100% / 3 - 20px);
+    transform: translateY(100px);
+    transition: 0.5s;
+    opacity: 0;
   }
+
+  .con1.on li {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+
+  .con1 li:nth-child(1) {
+    transition-delay: 0.2s;
+  }
+  .con1 li:nth-child(2) {
+    transition-delay: 0.4s;
+  }
+  .con1 li:nth-child(3) {
+    transition-delay: 0.6s;
+  }
+
   .con1 ul img {
     width: 100%;
     height: 100%;
@@ -106,6 +135,7 @@
     width: 100%;
     padding: 100px 0px;
     color: var(--color);
+    overflow: hidden;
   }
   .con2 h3 {
     width: 650px;
@@ -113,7 +143,16 @@
     font-family: "Abhaya Libre", serif;
     font-weight: 300;
     margin: 0 auto 50px;
+    transition: 0.5s;
+    transform: translateY(100px);
+    opacity: 0;
   }
+
+  .con2 h3.on {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+
   .con2 .bg_y {
     background-color: #fceea3;
   }
@@ -135,6 +174,47 @@
     padding: 100px;
     box-sizing: border-box;
     font-family: "Freesentation-9Black";
+    transform: translateX(-100%);
+    transition: 1.8s;
+    opacity: 0;
+  }
+
+  .con2 .c1 .txt.on {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .con2 .c1 .txt_image {
+    transform: translateX(100%);
+    transition: 1s;
+    opacity: 0;
+  }
+
+  .con2 .c1 .txt_image.on {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .con2 .c2 .txt {
+    transform: translateX(100%);
+    transition: 1.8s;
+    opacity: 0;
+  }
+
+  .con2 .c2 .txt.on {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .con2 .c2 .txt_image {
+    transform: translateX(-100%);
+    transition: 1s;
+    opacity: 0;
+  }
+
+  .con2 .c2 .txt_image.on {
+    transform: translateX(0);
+    opacity: 1;
   }
 
   .con2 .txt span {
@@ -462,6 +542,13 @@
     font-family: "Abhaya Libre", serif;
     font-weight: 200;
     margin-bottom: 10px;
+    transition: 0.5s;
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  .con1 h3.on {
+    transform: translateY(0px);
+    opacity: 1;
   }
   .con1 ul {
     width: 100%;
@@ -470,6 +557,24 @@
   }
   .con1 ul li {
     width: calc(100% / 3 - 10px);
+    transform: translateY(100px);
+    transition: 0.5s;
+    opacity: 0;
+  }
+
+  .con1.on li {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+
+  .con1 li:nth-child(1) {
+    transition-delay: 0.2s;
+  }
+  .con1 li:nth-child(2) {
+    transition-delay: 0.4s;
+  }
+  .con1 li:nth-child(3) {
+    transition-delay: 0.6s;
   }
   .con1 ul img {
     width: 100%;
@@ -844,6 +949,14 @@
     font-family: "Abhaya Libre", serif;
     font-weight: 200;
     margin-bottom: 10px;
+    transition: 0.5s;
+    transform: translateY(50px);
+    opacity: 0;
+  }
+
+  .con1 h3.on {
+    transform: translateY(0px);
+    opacity: 1;
   }
   .con1 ul {
     width: 100%;
@@ -852,7 +965,24 @@
   }
   .con1 ul li {
     width: calc(100% / 3 - 10px);
+    transform: translateY(100px);
+    transition: 0.5s;
+    opacity: 0;
   }
+  .con1 li:nth-child(1) {
+    transition-delay: 0.2s;
+  }
+  .con1 li:nth-child(2) {
+    transition-delay: 0.4s;
+  }
+  .con1 li:nth-child(3) {
+    transition-delay: 0.6s;
+  }
+  .con1.on li {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+
   .con1 ul img {
     width: 100%;
   }
@@ -863,6 +993,7 @@
     transform: translateY(-30px);
     text-align: center;
   }
+
   /* con2 */
   .con2 {
     width: 100%;
