--- a/css/index.css
+++ b/css/index.css
@@ -45,31 +45,53 @@
     width: 100%;
     height: 100vh;
     padding: 100px 0px;
+    position: relative;
   }
   .visual .wrap {
-    width: 90%;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
   }
   .visual h2 {
-    font-size: 80px;
+    font-size: 100px;
     font-family: "Abhaya Libre", serif;
     font-weight: 500;
+    /* text-align: center; */
+    /* margin-top: 30px; */
+    color: var(--color);
+    position: absolute;
+    /* z-index: ; */
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .visual span {
+    font-size: 30px;
+    font-family: "Abhaya Libre", serif;
+    font-weight: 600;
+  }
+  .visual p {
+    font-size: 20px;
     text-align: center;
-    margin-top: 30px;
+    font-family: "Freesentation-9Black";
+    transform: translateY(100px);
     color: var(--color);
   }
-
   .visual a {
-    width: 85%;
-    height: 70%;
+    width: 100%;
+    height: 100%;
     display: block;
     margin: 0 auto;
   }
   .visual img {
     width: 100%;
     height: 100%;
+    /* opacity: 0.5; */
     object-fit: cover;
+    position: absolute;
+    top: 0;
+    /* left: 50%;
+    transform: translate(-13%, -50%); */
+    z-index: 10;
   }
 
   /* con1 */
@@ -304,31 +326,52 @@
     width: calc(100% / 2);
   }
 
-  .texture {
+  .con3 .texture {
     width: 100%;
     display: flex;
     justify-content: space-between;
     gap: 150px;
   }
 
-  .texture li {
+  .con3 .texture li {
     width: 300px;
     height: 380px;
     object-fit: cover;
+    opacity: 0;
+    transition: 3s;
+  }
+
+  .con3 .texture li:nth-child(1) {
+    transition: 1.5s;
+  }
+  .con3 .texture li:nth-child(2) {
+    transition: 3.7s;
+  }
+
+  .con3.on .texture li {
+    opacity: 1;
   }
 
   .texture li:nth-child(1) {
     margin: 120px 0px 0px -120px;
   }
 
-  .texture img {
+  .con3 .texture img {
     width: 400px;
     height: 550px;
   }
-  .texture p {
+  .con3 .texture p {
     font-size: 45px;
     margin: 20px 0px 0px -30px;
     font-family: "Abhaya Libre", serif;
+    transform: translateY(150px);
+    transition: 1s;
+    opacity: 0;
+  }
+
+  .con3.on .texture p {
+    transform: translateY(0px);
+    opacity: 1;
   }
 
   .con3 ul li:nth-child(2) h3 {
@@ -336,8 +379,15 @@
     margin: 80px 0px 15px;
     font-size: 35px;
     font-family: "Abhaya Libre", serif;
+    transform: translateY(-50px);
+    transition: 1s;
+    opacity: 0;
   }
 
+  .con3.on ul li:nth-child(2) h3 {
+    transform: translateY(0px);
+    opacity: 1;
+  }
   .soap {
     font-family: "Freesentation-9Black";
   }
@@ -345,10 +395,20 @@
     display: flex;
     justify-content: center;
     gap: 20px;
+    transform: translateY(80px);
+    opacity: 0;
+    transition: 1s;
   }
 
   .soap > ul > li {
     margin-top: 20px;
+  }
+
+  .soap > ul:nth-child(1) {
+    transition: 0.8s;
+  }
+  .soap > ul:nth-child(2) {
+    transition: 1.5s;
   }
 
   .soap img {
@@ -356,10 +416,16 @@
   }
   .soap h4 {
     margin: 10px 0px;
+    transition: 0.8s;
+    transform: translateY(20px);
+    opacity: 0;
   }
   .soap p {
     font-size: 14px;
     width: 300px;
+    transition: 1.5s;
+    transform: translateY(20px);
+    opacity: 0;
   }
 
   .soap_tag {
@@ -374,7 +440,30 @@
   .soap_tag li {
     padding: 3px;
     background-color: #eee;
+    transform: translateY(20px);
+    opacity: 0;
   }
+
+  .con3.on .soap > ul {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .con3.on .soap h4 {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  .con3.on .soap p {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .con3 .soap_tag li.on {
+    transform: translateX(0);
+    opacity: 1;
+    transition: 0.3s;
+  }
+
   /* con4 */
   .con4 {
     width: 100%;
@@ -387,6 +476,13 @@
     text-align: center;
     margin-bottom: 30px;
     font-family: "Abhaya Libre", serif;
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  .con4.on h3 {
+    transform: translateY(0px);
+    opacity: 1;
+    transition: 1.5s;
   }
 
   .con4 ul {
@@ -397,6 +493,13 @@
   }
   .con4 ul li {
     width: calc(100% / 5 - 30px);
+    transition: 0.7s;
+    opacity: 0;
+  }
+
+  .con4 ul li.on {
+    transform: rotateY(360deg);
+    opacity: 1;
   }
   .con4 ul img {
     width: 100%;
